# pipe-gpt

./: .gitattributes  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
experiments/: project-review.sh  scripts-review.sh
src/: main.rs
src/api/: openai.rs
src/cli/: mod.rs  output.rs  parse.rs
src/config/: models.rs
