[package]
authors = ["Craig Mayhew"]
categories = ["command-line-utilities"]
description = "A command line utility to pipe content to GPT"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = [
    "cli",
    "gpt",
    "gpt4",
    "openai",
    "terminal",
]
license = "MIT"
name = "pipe-gpt"
readme = "README.md"
repository = "https://github.com/craigmayhew/pipe-gpt"
version = "0.2.0"

[dependencies]
atty = "0.2" # For determining if data is piped to the executable or not
clap = { version = "4.4", features = ["cargo"] } # For command-line argument parsing
# logging crates
env_logger = "0.9"
log = "0.4"
openai_api_rust = "0.1.8" # For OpenAI API
reqwest = "0.11" # For making HTTP requests
termimad = "0.28" # For rendering text as markdown in terminal
tokio = { version = "1.35", features = ["full"] } # For asynchronous runtime